--- a/css/styles.css
+++ b/css/styles.css
@@ -1281,6 +1281,91 @@ input[type='checkbox'] {
 	margin-left: 0.625rem;
 }
 
+/***********************/
+/*     Tamplate     */
+/***********************/
+.cards-3 {
+	padding-top: 7.875rem;
+	padding-bottom: 2.25rem;
+	
+}
+
+.cards-3 .h2-heading {
+	margin-bottom: 3.75rem;
+}
+
+.cards-3 .card {
+	display: block;
+	max-width: 19rem;
+	margin-right: auto;
+	margin-bottom: 3rem;
+	margin-left: auto;
+	border: 1px solid #ccd3df;
+	border-radius: 0.375rem;
+}
+
+.cards-3 .card .card-body {
+	padding: 2.5rem 2rem 2.75rem 2em;
+}
+
+.cards-3 .card .card-title {
+	margin-bottom: 0.5rem;
+	color: #5f4dee;
+	font: 700 1.125rem/1.5rem "Open Sans", sans-serif;
+}
+
+.cards-3 .card .price .currency {
+	margin-right: 0.25rem;
+	color: #434c54;
+	font-weight: 700;
+	font-size: 1.5rem;
+	vertical-align: 40%;
+}
+
+.cards-3 .card .price .value {
+	color: #434c54;
+	font: 700 3.25rem/3.5rem "Open Sans", sans-serif;
+	text-align: center;
+}
+
+.cards-3 .card .frequency {
+	font-size: 0.875rem;
+}
+
+.cards-3 .card .divider {
+	height: 1px;
+	margin-top: 1.75rem;
+	margin-bottom: 2rem;
+	border: none;
+	background-color: #ccd3df;
+}
+
+.cards-3 .card .list-unstyled {
+	margin-top: 1.875rem;
+	margin-bottom: 1.625rem;
+	text-align: left;
+}
+
+.cards-3 .card .list-unstyled .media {
+	margin-bottom: 0.5rem;
+}
+
+.cards-3 .card .list-unstyled .fas {
+	color: #5f4dee;
+	font-size: 0.875rem;
+	line-height: 1.625rem;
+}
+
+.cards-3 .card .list-unstyled .fas.fa-times {
+	margin-left: 0.1875rem;
+	margin-right: 0.125rem;
+	color: #555;
+}
+
+.cards-3 .card .list-unstyled .media-body {
+	margin-left: 0.625rem;
+}
+
 
 /****************************/
 /*     12. Testimonials     */
