--- a/tamplate/MyPortfolio/assets/css/style.css
+++ b/tamplate/MyPortfolio/assets/css/style.css
@@ -880,7 +880,7 @@ section {
   color: #fff;
 }
 
-.contact .php-email-form {
+.contact .email-form {
   width: 100%;
   padding: 30px;
   background: #fff;
